<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#26A69A"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/user_button"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@mipmap/user_foreground" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textSize="20dp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/itemName_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/itemName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemName_textView"
        app:layout_constraintTop_toBottomOf="@+id/header_textView" />

    <TextView
        android:id="@+id/itemName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/itemName"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_textView" />

    <TextView
        android:id="@+id/itemCalori_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/itemCalori"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName_textView" />

    <TextView
        android:id="@+id/itemAbout_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/itemAbout"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemCalori_textView" />

    <EditText
        android:id="@+id/itemAbout_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/itemAbout"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemAbout_textView"
        app:layout_constraintTop_toBottomOf="@+id/itemCalori_editText" />

    <TextView
        android:id="@+id/header_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="160dp"
        android:hint="@string/addItemPageHeader"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topToolbar" />

    <EditText
        android:id="@+id/itemCalori_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemCalori_textView"
        app:layout_constraintTop_toBottomOf="@+id/itemName_editText" />

    <Button
        android:id="@+id/addNewItem_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="160dp"
        android:text="@string/add"
        android:background="@color/colorPrimary"
        android:textColor="@color/white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemAbout_editText" />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="#C5CCC3"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addItem_button"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@mipmap/add_foreground"
                android:gravity="bottom"
                android:text="Ekle"
                android:textAlignment="center"
                android:textSize="7dp"
                tools:layout_editor_absoluteX="16dp" />

            <Button
                android:id="@+id/searchCalori_button"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@mipmap/search_foreground"
                android:gravity="bottom"
                android:text="Kaç Kalori"
                android:textAlignment="center"
                android:textSize="7dp"
                tools:layout_editor_absoluteX="16dp" />

            <Button
                android:id="@+id/caloriCounter_button"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@mipmap/calculator_foreground"
                android:gravity="bottom"
                android:text="Kalori Takip"
                android:textAlignment="center"
                android:textSize="7dp"
                tools:layout_editor_absoluteX="16dp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
</androidx.constraintlayout.widget.ConstraintLayout>